--- a/lib/systemd/system/jsonstatsd.service
+++ b/lib/systemd/system/jsonstatsd.service
@@ -4,7 +4,7 @@ After=syslog.target network.target auditd.service
 
 [Service]
 EnvironmentFile=/etc/sysconfig/jsonstatsd
-ExecStart=/usr/bin/jsonstatsd
+ExecStart=/usr/bin/jsonstatsd --listen $INTERFACE --port $PORT --logdir $LOGDIR
 
 [Install]
 WantedBy=multi-user.target
