Add a user account to run as, instead of root

--- a/lib/systemd/system/jsonstatsd.service
+++ b/lib/systemd/system/jsonstatsd.service
@@ -5,6 +5,7 @@ After=syslog.target network.target auditd.service
 [Service]
 EnvironmentFile=/etc/sysconfig/jsonstatsd
 ExecStart=/usr/bin/jsonstatsd --listen $INTERFACE --port $PORT --logdir $LOGDIR
+User=jsonstatsd
 
 [Install]
 WantedBy=multi-user.target
