Add note about Inception

--- a/docs/man/man1/jsonstatsd.1.asciidoc.in
+++ b/docs/man/man1/jsonstatsd.1.asciidoc.in
@@ -99,7 +99,7 @@ FILES
 
 AUTHOR
 ------
-jsonstatsd was written by Red Hat, Inc..
+jsonstatsd was written by the *Inception* team at Red Hat, Inc..
 
 This man page was written by Tim Bielawa <tbielawa@redhat.com>.
 
